logs/odooku-odoo-fleet.log
Listing '.'...
Listing './bin'...
Compiling './bin/enhancer.py'...
Compiling './bin/explode.py'...
Compiling './bin/gifmaker.py'...
Compiling './bin/painter.py'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Compiling './bin/player.py'...
Compiling './bin/runxlrd.py'...
Compiling './bin/thresholder.py'...
Compiling './bin/viewer.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/greenlet-0.4.10.dist-info'...
Listing './lib/python3.5/site-packages/num2words'...
Compiling './lib/python3.5/site-packages/num2words/lang_EN_EUR.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_EUR.py", line 41
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/num2words/lang_EN_GB_old.py'...
***   File "./lib/python3.5/site-packages/num2words/lang_EN_GB_old.py", line 41
    print val, "is", n2w.to_currency(val)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/num2words-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/olefile'...
Listing './lib/python3.5/site-packages/olefile-0.44.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.5.3.dist-info'...
Listing './lib/python3.5/site-packages/python_stdnum-1.8.1.egg-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/stdnum'...
Listing './lib/python3.5/site-packages/stdnum/al'...
Listing './lib/python3.5/site-packages/stdnum/ar'...
Listing './lib/python3.5/site-packages/stdnum/at'...
Listing './lib/python3.5/site-packages/stdnum/au'...
Listing './lib/python3.5/site-packages/stdnum/be'...
Listing './lib/python3.5/site-packages/stdnum/bg'...
Listing './lib/python3.5/site-packages/stdnum/br'...
Listing './lib/python3.5/site-packages/stdnum/ca'...
Listing './lib/python3.5/site-packages/stdnum/ch'...
Listing './lib/python3.5/site-packages/stdnum/cl'...
Listing './lib/python3.5/site-packages/stdnum/cn'...
Listing './lib/python3.5/site-packages/stdnum/co'...
Listing './lib/python3.5/site-packages/stdnum/cy'...
Listing './lib/python3.5/site-packages/stdnum/cz'...
Listing './lib/python3.5/site-packages/stdnum/de'...
Listing './lib/python3.5/site-packages/stdnum/dk'...
Listing './lib/python3.5/site-packages/stdnum/do'...
Listing './lib/python3.5/site-packages/stdnum/ec'...
Listing './lib/python3.5/site-packages/stdnum/ee'...
Listing './lib/python3.5/site-packages/stdnum/es'...
Listing './lib/python3.5/site-packages/stdnum/eu'...
Listing './lib/python3.5/site-packages/stdnum/fi'...
Listing './lib/python3.5/site-packages/stdnum/fr'...
Listing './lib/python3.5/site-packages/stdnum/gb'...
Listing './lib/python3.5/site-packages/stdnum/gr'...
Listing './lib/python3.5/site-packages/stdnum/hr'...
Listing './lib/python3.5/site-packages/stdnum/hu'...
Listing './lib/python3.5/site-packages/stdnum/ie'...
Listing './lib/python3.5/site-packages/stdnum/in_'...
Listing './lib/python3.5/site-packages/stdnum/is_'...
Listing './lib/python3.5/site-packages/stdnum/iso7064'...
Listing './lib/python3.5/site-packages/stdnum/it'...
Listing './lib/python3.5/site-packages/stdnum/lt'...
Listing './lib/python3.5/site-packages/stdnum/lu'...
Listing './lib/python3.5/site-packages/stdnum/lv'...
Listing './lib/python3.5/site-packages/stdnum/mc'...
Listing './lib/python3.5/site-packages/stdnum/mt'...
Listing './lib/python3.5/site-packages/stdnum/mx'...
Listing './lib/python3.5/site-packages/stdnum/my'...
Listing './lib/python3.5/site-packages/stdnum/nl'...
Listing './lib/python3.5/site-packages/stdnum/no'...
Listing './lib/python3.5/site-packages/stdnum/pl'...
Listing './lib/python3.5/site-packages/stdnum/pt'...
Listing './lib/python3.5/site-packages/stdnum/ro'...
Listing './lib/python3.5/site-packages/stdnum/rs'...
Listing './lib/python3.5/site-packages/stdnum/ru'...
Listing './lib/python3.5/site-packages/stdnum/se'...
Listing './lib/python3.5/site-packages/stdnum/si'...
Listing './lib/python3.5/site-packages/stdnum/sk'...
Listing './lib/python3.5/site-packages/stdnum/sm'...
Listing './lib/python3.5/site-packages/stdnum/tr'...
Listing './lib/python3.5/site-packages/stdnum/us'...
Listing './lib/python3.5/site-packages/vatnumber'...
Listing './lib/python3.5/site-packages/vatnumber-1.2.egg-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/doc'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.0.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
